--- a/index.html
+++ b/index.html
@@ -6,6 +6,42 @@
     <title>Calculator</title>
 </head>
 <body>
-    
+    <div class="calcualtor-body">
+        <input type="text">
+        <div class="actions">
+            <button>C</button>
+            <button>()</button>
+            <button>%</button>
+            <button>/</button>
+        </div>
+
+        <div>
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>x</button>
+        </div>
+
+        <div>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>-</button>
+        </div>
+
+        <div>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>+</button>
+        </div>
+
+        <div>
+            <button>+/-</button>
+            <button>0</button>
+            <button>.</button>
+            <button>=</button>
+        </div>
+    </div>
 </body>
 </html>
