Add style to calculator

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    <div class="calcualtor-body">
+    <div class="calculator-body">
         <input type="text">
         <div class="actions">
             <button>C</button>
@@ -15,28 +16,28 @@
             <button>/</button>
         </div>
 
-        <div>
+        <div class="first-row">
             <button>7</button>
             <button>8</button>
             <button>9</button>
             <button>x</button>
         </div>
 
-        <div>
+        <div class="second-row">
             <button>4</button>
             <button>5</button>
             <button>6</button>
             <button>-</button>
         </div>
 
-        <div>
+        <div class="third-row">
             <button>1</button>
             <button>2</button>
             <button>3</button>
             <button>+</button>
         </div>
 
-        <div>
+        <div class="fourth-row">
             <button>+/-</button>
             <button>0</button>
             <button>.</button>
