--- a/index.html
+++ b/index.html
@@ -5,44 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="../css/styles.css">
+
 </head>
 <body>
     <div class="calculator-body">
-        <input type="text">
+        <input type="text" id="input">
         <div class="actions">
-            <button>C</button>
-            <button>()</button>
-            <button>%</button>
-            <button>/</button>
+            <button id="clear">C</button>
+            <button id="parenthesis">()</button>
+            <button id="module">%</button>
+            <button id="divide">/</button>
         </div>
-
+         
         <div class="first-row">
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>x</button>
+            <button id="7">7</button>
+            <button id="8">8</button>
+            <button id="9">9</button>
+            <button id="multiply">x</button>
         </div>
 
         <div class="second-row">
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>-</button>
+            <button id="4">4</button>
+            <button id="5">5</button>
+            <button id="6">6</button>
+            <button id="subtract">-</button>
         </div>
-
+        
         <div class="third-row">
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>+</button>
+            <button id="1">1</button>
+            <button id="2">2</button>
+            <button id="3">3</button>
+            <button id="sum">+</button>
         </div>
 
         <div class="fourth-row">
-            <button>+/-</button>
-            <button>0</button>
-            <button>.</button>
-            <button>=</button>
+            <button id="sign">+/-</button>
+            <button id="0">0</button>
+            <button id="dot">.</button>
+            <button id="equal">=</button>
         </div>
     </div>
 </body>
+<script src="../js/script.js"></script>
 </html>
