Remove decimal support

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div class="calculator-body">
-        <input type="text" id="input">
+        <input type="text" id="input" >
         <div class="actions">
             <button id="clear">C</button>
-            <button id="parenthesis">()</button>
+            <button id="delete">Del</button>
             <button id="module">%</button>
             <button id="divide">/</button>
         </div>
@@ -41,7 +41,6 @@
         <div class="fourth-row">
             <button id="sign">+/-</button>
             <button id="0">0</button>
-            <button id="dot">.</button>
             <button id="equal">=</button>
         </div>
     </div>
