--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 
 </head>
 <body>
@@ -45,5 +45,5 @@
         </div>
     </div>
 </body>
-<script src="../js/script.js"></script>
+<script src="js/script.js"></script>
 </html>
